test/Fail/Issue4606.err
Issue4606.agda:34.1-40.28: error: [TerminationIssue]
Termination checking failed for the following functions:
Problematic calls:
  α y
    (at Issue4606.agda:40.24-25)
